k8s/overlays/staging-blue-green/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-demo-staging
  labels:
    istio-injection: enabled
