k8s/overlays/staging-blue-green/replica-count.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: argo-demo
spec:
  replicas: 1
