k8s/overlays/staging-blue-green/preview-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: argo-demo-preview
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http-80
  selector:
    app: argo-demo
